<resources>
    <string name="app_name">Nix Example</string>

    <string name="action_abort">Abort</string>
    <string name="action_activate">Activate</string>
    <string name="action_calibrate">Calibrate</string>
    <string name="action_cancel">Cancel</string>
    <string name="action_connect">Connect</string>
    <string name="action_continue">Continue</string>
    <string name="action_copy">Copy</string>
    <string name="action_device_info">Device Info</string>
    <string name="action_disconnect">Disconnect</string>
    <string name="action_more">More</string>
    <string name="action_ok">OK</string>
    <string name="action_scan">Scan</string>
    <string name="action_settings">Settings</string>

    <string name="error_calibration_not_started">Unknown error: could not start calibration scan</string>
    <string name="error_calibration_short">Device calibration failed</string>
    <string name="error_calibration_detail">Error code %1$s and message \'%2$s\'</string>
    <string name="error_incorrect_tile_serial">Calibration error: the tile serial number does not match the unit serial number</string>
    <string name="error_incorrect_tile_format">Calibration error: the tile QR code data does not match the expected format</string>

    <string name="hint_calibration_place_on_tile">Place the unit onto the reference tile scanning area</string>
    <string name="hint_qr_code">Place the tile QR code inside the frame</string>

    <string name="label_cielab">CIELAB (%1$s)</string>
    <string name="label_options">Options</string>
    <string name="label_signature">Signature</string>

    <string name="message_location_permission_primer">This app uses location services in order to scan for nearby Nix devices. %1$s</string>
    <string name="message_location_permission_primer_reattempt">Change permissions in your device\'s app settings and allow access to \'Your location\'</string>
    <string name="message_bluetooth_permission_primer">This app uses Bluetooth in order to scan for nearby Nix devices. %1$s</string>
    <string name="message_bluetooth_permission_primer_reattempt">Change permissions in your device\'s app settings and allow access to \'Nearby devices\'</string>
    <string name="message_camera_error">Unable to start camera</string>
    <string name="message_camera_permission_primer">This app uses the camera to read the QR code on the reference tile. %1$s</string>
    <string name="message_camera_permission_primer_reattempt">Change permissions in your device\'s app settings and allow access to \'Camera\'</string>
    <string name="message_confirm_disconnect">Disconnect from Nix device?</string>
    <string name="message_device_scanner_error">Could not search for devices (%1$s)</string>
    <string name="message_location_denied">Location access not granted; devices cannot be found!</string>
    <string name="message_bluetooth_denied">Bluetooth access not granted; devices cannot be found!</string>
    <string name="message_camera_denied">Camera access not granted; cannot scan QR code!</string>
    <string name="message_no_devices_found">No supported Nix devices were found nearby</string>
    <string name="message_permission_error">Error: %1$s</string>
    <string name="message_permission_primer_first_attempt">Please allow access at the next prompt.</string>
    <string name="message_sdk_check_fail">This device cannot be used with this application. Contact application vendor for more support.</string>
    <string name="message_sdk_check_report">Type: %1$s\nS/N: %2$s\nSDK ID: %3$s</string>
    <string name="message_minimum_modes_error">At least one scan mode must be enabled</string>
    <string name="message_spectral_unavailable_device">Spectral data is not available for %1$s devices</string>
    <string name="message_spectral_unavailable_licensing">Spectral data is not available for the active license</string>
    <string name="message_spectral_unavailable_generic">Spectral data is not available</string>
    <string name="message_activation_error">Nix Universal SDK is not activated (%1$s).\n\nVerify that the activation options and signature are correct.</string>
    <string name="message_device_not_supported">The active license does not support %1$s devices.</string>
    <string name="message_license_change">Update these values to match your provided license and click \'%1$s\'</string>
    <string name="message_license_new_state">New license state is \'%1$s\'</string>

    <string name="status_calibration_complete">Calibration completed with status \'%1$s\'</string>
    <string name="status_connected">Connected to %1$s</string>
    <string name="status_connecting">Connecting to %1$s…</string>
    <string name="status_disconnected">Disconnected from %1$s</string>
    <string name="status_scanning">Scanning…</string>
    <string name="status_scan_error">Error: %1$s</string>
    <string name="status_scan_error_battery">Low battery, please recharge Nix device</string>
    <string name="status_scan_error_unknown">Unknown scan error</string>
    <string name="status_scan_error_scan_mode">Unsupported scan mode</string>
    <string name="status_scan_error_ambient">Ambient light detected</string>
    <string name="status_scan_error_busy">Device is busy</string>
    <string name="status_scan_error_activation">License is not active</string>
    <string name="status_unavailable">Unavailable</string>
    <string name="status_disabled">Disabled</string>
    <string name="status_enabled">Enabled</string>

    <string name="temperature_format_celsius">%1$.1f °C</string>
    <string name="temperature_format_raw">%1$.0f (raw)</string>

    <string name="title_activation_error">Activation Error</string>
    <string name="title_axis_reflectance">Reflectance</string>
    <string name="title_axis_wavelength">λ [nm]</string>
    <string name="title_battery_level">Battery Level</string>
    <string name="title_scan_info">Scan Info</string>
    <string name="title_device_firmware">Firmware Version</string>
    <string name="title_device_hardware">Hardware Version</string>
    <string name="title_device_list_searching">Nearby Devices</string>
    <string name="title_device_name">Device Name</string>
    <string name="title_device_not_supported">Device Not Supported</string>
    <string name="title_device_settings">Device Settings</string>
    <string name="title_false">False</string>
    <string name="title_haptic_feedback">Haptic Feedback</string>
    <string name="title_home">Home</string>
    <string name="title_temperature_compensation">Temperature Compensation</string>
    <string name="title_permission_primer">Grant Access</string>
    <string name="title_reference_white">Reference White</string>
    <string name="title_rgb_feedback">RGB Feedback</string>
    <string name="title_scan_counter">Scan Counter</string>
    <string name="title_scan_mode">Scan Mode</string>
    <string name="title_scan_modes">Scan Modes</string>
    <string name="title_serial_number">Serial Number</string>
    <string name="title_temperature">Device Temperature</string>
    <string name="title_temperature_reference">Reference Temperature</string>
    <string name="title_temperature_scan">Scan Temperature</string>
    <string name="title_true">True</string>
    <string name="title_usb_connected">External Power Connected</string>
    <string name="title_white_tile_normalization">Tile Normalization</string>
    <string name="title_field_calibration_date">Field Calibration Date</string>
    <string name="title_field_calibration_due">Field Calibration Due</string>
    <string name="title_license_change">Change License Key</string>
    <string name="title_license_info">License Info</string>
    <string name="title_license_sdk_version">SDK Version</string>
    <string name="title_license_state">License Manager State</string>
    <string name="title_license_expiry">Expiry Date</string>
    <string name="title_license_uuid">UUID</string>
    <string name="title_license_allocation">Allocation Codes</string>
    <string name="title_license_device_types">Device Types</string>
    <string name="title_license_features">Features</string>
</resources>