<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragment.PlotFragment">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/plot_container"
        app:cardCornerRadius="@dimen/corner_radius">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <com.nixsensor.nixexample.util.VerticalTextView
                android:id="@+id/y_axis_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="8dp"
                app:layout_constraintStart_toStartOf="@+id/plot_info_button"
                app:layout_constraintEnd_toEndOf="@+id/plot_info_button"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="@+id/plot"
                android:rotation="180"
                android:textAppearance="@style/TextAppearance.AppCompat.Small"
                android:textColor="?attr/colorOnBackground"
                android:textStyle="bold"
                android:text="@string/title_axis_reflectance"/>

            <TextView
                android:id="@+id/x_axis_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="8dp"
                app:layout_constraintStart_toStartOf="@+id/plot"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:orientation="vertical"
                android:rotation="0"
                android:textAppearance="@style/TextAppearance.AppCompat.Small"
                android:textColor="?attr/colorOnBackground"
                android:textStyle="bold"
                android:text="@string/title_axis_wavelength"/>

            <com.github.mikephil.charting.charts.CombinedChart
                android:id="@+id/plot"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                app:layout_constraintStart_toEndOf="@+id/y_axis_label"
                app:layout_constraintBottom_toTopOf="@+id/x_axis_label"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:visibility="invisible"/>

            <ImageButton
                android:id="@+id/plot_info_button"
                android:layout_width="@dimen/plot_button_size"
                android:layout_height="@dimen/plot_button_size"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:srcCompat="@drawable/ic_info"
                style="@style/action_button_style"
                android:visibility="invisible"/>

            <TextView
                android:id="@+id/empty_plot_label"
                android:layout_width="0dp"
                android:layout_height="0dp"
                app:layout_constraintTop_toTopOf="@+id/plot"
                app:layout_constraintBottom_toBottomOf="@+id/plot"
                app:layout_constraintStart_toStartOf="@+id/plot"
                app:layout_constraintEnd_toEndOf="@+id/plot"
                android:layout_margin="@dimen/fab_margin"
                android:textAppearance="@style/TextAppearance.AppCompat.Small"
                android:textColor="?attr/colorOnBackground"
                android:textStyle="italic"
                android:textAlignment="center"
                android:gravity="center"
                android:text="@string/message_spectral_unavailable_device"
                android:visibility="gone"/>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

</FrameLayout>